[package]
name = "minesweeper-tutorial"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
board_plugin = { path = "board_plugin" }

bevy-inspector-egui = { version = "0.11.0", optional = true }

[workspace]
resolver = "2"
members = [
    "board_plugin"
]